--- a/test/dummy/app/views/users/index.html.erb
+++ b/test/dummy/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
   <tr>
     <td><%= user.name %></td>
     <td><%= user.comments.count %></td>
-    <td><%= user.badges.collect{|b| "#{b.name.capitalize} (#{b.level})" }.join(', ') %></td>
+    <td><%= user.show_badges %></td>
     <td><%= link_to 'Show', user %>
     - <%= link_to 'Edit', edit_user_path(user) %>
     - <%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
