--- a/test/dummy/app/views/comments/show.html.erb
+++ b/test/dummy/app/views/comments/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Name:</b>
   <%= @comment.name %>
@@ -13,6 +11,11 @@
 <p>
   <b>User:</b>
   <%= @comment.user_id %>
+</p>
+
+<p>
+  <b>Vote:</b>
+  <%= @comment.votes %>
 </p>
 
 
