--- a/test/dummy/app/views/layouts/application.html.haml
+++ b/test/dummy/app/views/layouts/application.html.haml
@@ -6,7 +6,13 @@
     = javascript_include_tag :defaults
     = csrf_meta_tag
   %body
+    %h1= link_to 'Dummy app', '/'
+
+    - flash.each do |name, msg|
+      = content_tag :p, msg, :class => (name == 'error' ? 'error' : 'notice')
+
     = yield
+
     %ul
       %li= link_to 'Users', users_url
       %li= link_to 'Comments', comments_url
