Starts testing (have to install talent gem on dummy app).

--- a/test/dummy/app/views/comments/index.html.erb
+++ b/test/dummy/app/views/comments/index.html.erb
@@ -13,7 +13,7 @@
   </tr>
 
 <% @comments.each do |comment| %>
-  <tr>
+  <tr id="c_<%= comment.id %>">
     <td><%= comment.name %></td>
     <td><%= comment.comment %></td>
     <td><%= comment.user_id %></td>
