Adds points granting for configured actions.

--- a/test/dummy/app/views/users/index.html.erb
+++ b/test/dummy/app/views/users/index.html.erb
@@ -5,6 +5,7 @@
     <th>Name</th>
     <th>#Comments</th>
     <th>Badges</th>
+    <th>Points</th>
   </tr>
 
 <% @users.each do |user| %>
@@ -12,6 +13,7 @@
     <td><%= user.name %></td>
     <td><%= user.comments.count %></td>
     <td><%= user.show_badges %></td>
+    <td><%= user.points %></td>
     <td><%= link_to 'Show', user %>
     - <%= link_to 'Edit', edit_user_path(user) %>
     - <%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
