Adding test coverage 'simplecov'. Some more tests.

--- a/test/dummy/app/views/users/_form.html.erb
+++ b/test/dummy/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<% obj = params[:action] == :new ? @user : [:registrations, @user] %>
+<% obj = params[:action] == 'new' ? @user : [:registrations, @user] %>
 <%= form_for obj do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
