--- a/test/dummy/app/views/users/index.html.erb
+++ b/test/dummy/app/views/users/index.html.erb
@@ -16,7 +16,7 @@
     <td><%= user.points %></td>
     <td><%= link_to 'Show', user %>
     - <%= link_to 'Edit', edit_user_path(user) %>
-    - <%= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete %></td>
+    - <%= link_to 'Destroy', user, data: { :confirm => 'Are you sure?' }, :method => :delete %></td>
   </tr>
 <% end %>
 </table>
