Feature #130 Adding possibility to specify a category to point rules points allow to have a sum of points for all categories using :all Updated README Updated tests Updated dummy Use of fetch when initializing rule attributes to and category from options hash

--- a/test/dummy/app/views/users/index.html.erb
+++ b/test/dummy/app/views/users/index.html.erb
@@ -14,6 +14,7 @@
     <td><%= user.comments.count %></td>
     <td><%= user.show_badges %></td>
     <td><%= user.points %></td>
+    <td><%= user.points(:all) %></td>
     <td><%= link_to 'Show', user %>
     - <%= link_to 'Edit', edit_user_path(user) %>
     - <%= link_to 'Destroy', user, data: { :confirm => 'Are you sure?' }, :method => :delete %></td>
