Fixes Rails autoloader deprecation warnings (#354)
Fixes:
```
DEPRECATION WARNING: Initialization autoloaded the constants
ActionText::ContentHelper, ActionText::TagHelper, Merit::BadgeRules, and
Merit::PointRules
```

Also fixes `DEPRECATION WARNING: Initialization autoloaded the constant Merit::Badge` by:

- Wrapping `Merit::Badge.create` with
  `Rails.application.reloader.to_prepare` in `README.md`
- Adding `Rails.application.reloader.to_prepare` to `merit.erb` template

--- a/lib/merit/generators/templates/merit.erb
+++ b/lib/merit/generators/templates/merit.erb
@@ -17,14 +17,16 @@ Merit.setup do |config|
 end
 
 # Create application badges (uses https://github.com/norman/ambry)
-# badge_id = 0
-# [{
-#   id: (badge_id = badge_id+1),
-#   name: 'just-registered'
-# }, {
-#   id: (badge_id = badge_id+1),
-#   name: 'best-unicorn',
-#   custom_fields: { category: 'fantasy' }
-# }].each do |attrs|
-#   Merit::Badge.create! attrs
+# Rails.application.reloader.to_prepare do
+#   badge_id = 0
+#   [{
+#     id: (badge_id = badge_id+1),
+#     name: 'just-registered'
+#   }, {
+#     id: (badge_id = badge_id+1),
+#     name: 'best-unicorn',
+#     custom_fields: { category: 'fantasy' }
+#   }].each do |attrs|
+#     Merit::Badge.create! attrs
+#   end
 # end
