Add index on merit_actions.processed column (#356)
* add index to migration template
* add index to dummy app

[closes #355]

--- a/lib/merit/generators/active_record/templates/create_merit_actions.erb
+++ b/lib/merit/generators/active_record/templates/create_merit_actions.erb
@@ -12,4 +12,6 @@ class CreateMeritActions < ActiveRecord::Migration<%= migration_version %>
       t.timestamps null: false
     end
   end
+
+  add_index :merit_actions, :processed
 end
